<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/profile_picture_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/help_3" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/DistanceTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/connecttomobile"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/serial_number_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/connecttomobile_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/slide3_skip_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:clickable="true"
                android:text="@string/instruction_page3_skip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <Button
            android:id="@+id/button_instruction_close"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/profile_picture_image_view"
            android:layout_marginTop="48dp"
            android:background="@drawable/x" />

    </RelativeLayout>

</RelativeLayout>